# recallary

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
src/recallary/: __init__.py  __main__.py  bibtex.py  bootstrap.py  cli.py  config.py  database.py  domain.py  gui_runner.py  launcher.py  launchers.py
src/recallary/gui/: __init__.py  app.py  main_window.py  workers.py
src/recallary/indexing/: __init__.py  chunker.py  embedder.py  indexer.py  parser.py
src/recallary/search/: __init__.py  engine.py
tests/: test_chunker.py  test_config.py  test_index_and_search.py  test_launcher_runtime.py  test_launchers.py  test_parser.py
