[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recallary"
version = "0.1.0"
description = "Find papers in a local PDF library from vague natural-language descriptions."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "filelock>=3.16,<4",
    "huggingface-hub>=0.27,<2",
    "numpy>=2.1,<3",
    "PySide6>=6.8,<7",
    "bibtexparser>=1.4,<3",
    "pymupdf>=1.25,<2",
    "sentence-transformers>=5.1,<6",
    "typer>=0.15,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
]

[project.scripts]
recallary = "recallary.bootstrap:main"
recallary-cli = "recallary.bootstrap:cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
